--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Logr</title>
+    
   </head>
+  <link rel="sylesheet" href="/css/bootstrap.min.css" />
   <body>
     <div id="root"></div>
     <!--
